// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login Renders \`login\` with all auths enabled 1`] = `
<div
  class="login"
>
  <!---->
  <div
    class="login__description"
  >
    <c-compiled-template-stub
      template="description"
    />
  </div>
  <login-card-stub
    basic="true"
    cas="true"
    oauth="true"
    saml="true"
  />
  <login-footer-stub />
</div>
`;

exports[`login Renders \`login\` without auth enabled 1`] = `
<div
  class="login"
>
  <!---->
  <div
    class="login__description"
  >
    <c-compiled-template-stub
      template=""
    />
  </div>
  <login-card-stub />
  <login-footer-stub />
</div>
`;
